// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner component renders InstallState.downloading 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={true}
    icon={
      <Blueprint3.Spinner
        size={16}
        value={50}
      />
    }
    id="button-run"
    text="Downloading"
  />
  <AsarButton
    disabled={true}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders InstallState.installed 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={false}
    icon="play"
    id="button-run"
    onClick={[Function]}
    text="Run"
  />
  <AsarButton
    disabled={false}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders InstallState.installing 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={true}
    icon={
      <Blueprint3.Spinner
        size={16}
      />
    }
    id="button-run"
    text="Unzipping"
  />
  <AsarButton
    disabled={true}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders InstallState.missing 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={true}
    icon={
      <Blueprint3.Spinner
        size={16}
      />
    }
    id="button-run"
    text="Checking status"
  />
  <AsarButton
    disabled={true}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders idle 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={false}
    icon="play"
    id="button-run"
    onClick={[Function]}
    text="Run"
  />
  <AsarButton
    disabled={false}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders installing modules 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    disabled={false}
    icon={
      <Blueprint3.Spinner
        size={16}
      />
    }
    id="button-run"
    text="Installing modules"
  />
  <AsarButton
    disabled={true}
  />
</Blueprint3.ButtonGroup>
`;

exports[`Runner component renders running 1`] = `
<Blueprint3.ButtonGroup>
  <Blueprint3.Button
    active={true}
    disabled={false}
    icon="stop"
    id="button-run"
    onClick={[MockFunction]}
    text="Stop"
  />
  <AsarButton
    disabled={true}
  />
</Blueprint3.ButtonGroup>
`;
